# aigc-platform

./: README.md  pyproject.toml
datasets-examples/: quickstart.ipynb
peft-examples/sft/: requirements.txt
peft-examples/sft/.ipynb_checkpoints/: run_peft_deepspeed_tinyllama-checkpoint.sh
peft-examples/sft/configs/: deepspeed_config_1.yaml
wandb/: latest-run
wandb/run-20240829_113606-xsbm1ueo/: run-xsbm1ueo.wandb
wandb/run-20240829_113606-xsbm1ueo/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
