[tool.poetry]
name = "llms-tutorial"
version = "0.1.0"
description = "llms full tutorial"
authors = ["ChipWan <chip.wan@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
transformers = "^4.44.2"
trl = "^0.9.6"
datasets = "^2.21.0"
peft = "^0.12.0"
deepspeed = "^0.15.0"
accelerate = "^0.33.0"
scipy = "^1.14.1"
pandas = "^2.2.2"
xformers = "^0.0.27.post2"
opencv-python = "^4.10.0.84"
diffusers = "^0.30.1"
wandb = "^0.17.7"
scikit-image = "^0.24.0"
face-alignment = "^1.4.1"
evaluate = "^0.4.2"
tqdm = "^4.66.5"
pillow = "^10.4.0"
huggingface-hub = "^0.24.6"
argparse = "^1.4.0"
hnswlib = "^0.8.0"
safetensors = "^0.4.4"
bitsandbytes = "^0.43.3"
einops = "^0.8.0"
tiktoken = "^0.7.0"
matplotlib = "^3.9.2"
sentencepiece = "^0.2.0"
nltk = "^3.9.1"
hf-transfer = "^0.1.8"
jax = "^0.4.31"
jaxlib = "^0.4.31"
flax = "^0.8.5"
optax = "^0.2.3"
seqeval = "^1.2.2"
jupyter = "^1.1.1"
soundfile = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.peotry.source]]
name = "localhost"
url = "http://host.docker.internal:3141/root/pypi/+simple/"
default = true